<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aptitude Check</string>
    <string name="ver">Version: 1.0</string>
    <string name="dev">Developed By: Team Hard Targets</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="message">Select the category of questions</string>
    <string name="message1">Select the Category</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_remove_bookmark">Remove Bookmark</string>
    <string name="action_replay">Clean Slate</string>
    <string name="action_slate">Slate</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate Us</string>
    <string name="action_back">Previous</string>
    <string name="action_formula">Formulas</string>
    <string name="action_forward">Next</string>
    <string name="action_explain">Solution</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="dialog_message">Are you sure you want to quit the application?</string>
    <string name="dialog_title">Alert</string>
    <string name="yes">Quit</string>
    <string name="no">Return</string>
    <string name="more">More</string>
    <string name="title_activity_solution">SolutionActivity</string>
    <string name="title_activity_formula">FormulaActivity</string>
    <string name="title_activity_menu0">Menu0Activity</string>

</resources>
