<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_action_bookmark"
        android:title="@string/action_bookmark"
        android:showAsAction="always|withText"/>
    
    <item 
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/more"
        android:showAsAction="always">
        
        <menu>
            
            <item 
                android:id="@+id/action_rate"
                android:icon="@drawable/ic_action_rate"
                android:title="@string/action_rate"/>
            
            <item 
                android:id="@+id/action_share"
                android:icon="@drawable/ic_action_share"
                android:title="@string/action_share"/>
            
            <item 
                android:id="@+id/action_about"
                android:icon="@drawable/ic_action_about"
                android:title="@string/action_about"/>
            
        </menu>
        
    </item>

</menu>
